--- a/composer.json
+++ b/composer.json
@@ -7,23 +7,11 @@
     "Slim Framework",
     "runtracy",
     "Tracy",
-    "Debug bar",
-    "Debugbar",
-    "Debugger",
-    "Eloquent ORM",
-    "illuminate database",
-    "PTY Terminal",
-    "Profiler",
-    "Slim3", "Slim 3",
-    "Twig",
-    "Idorm",
-    "Doctrine DBAL"
+    "Debug bar"
   ],
   "authors": [
     {
-      "name": "Vladimir",
-      "email": "1f7.wizard@gmail.com",
-      "homepage": "http://runcmf.ru"
+      "name": "Pandog"
     }
   ],
   "require": {
@@ -38,8 +26,6 @@
     "illuminate/database": "^5.3",
     "twig/twig": "~1.24",
     "slim/twig-view": "~2.1",
-    "j4mie/idiorm": "^1.5",
-    "doctrine/orm": "^2.5"
   },
   "autoload": {
     "psr-4": {
