--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "runcmf/runtracy",
+  "name": "pandog/runtracy",
   "description": "Slim Framework Debugger",
   "license": "Apache-2.0",
   "type": "library",
@@ -29,7 +29,7 @@
   },
   "autoload": {
     "psr-4": {
-      "RunTracy\\": "src/RunTracy"
+      "PandogRunTracy\\": "src/RunTracy"
     }
   },
   "autoload-dev": {
