--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "phpunit/phpunit": "^5.7",
     "illuminate/database": "^5.3",
     "twig/twig": "~1.24",
-    "slim/twig-view": "~2.1",
+    "slim/twig-view": "~2.1"
   },
   "autoload": {
     "psr-4": {
